# Kaili

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
kaili/: CMakeLists.txt
kaili/include/: kaili.h
kaili/src/: kaili.cpp
kaili_example/: CMakeLists.txt  kaili_example.cpp
